--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@types/query-string": "^6.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "convex": "^1.8.0",
     "lucide-react": "^0.319.0",
     "next": "14.1.0",
+    "query-strings": "^0.1.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^2.13.0"
   },
   "devDependencies": {
     "@types/node": "^20",
